# uaserials-plugin

./: .gitignore  main.html  parsed.json  pyproject.toml  stremio-addon.py
src/uaseries/: decrypt.py  main.py  mappings.py  models.py  scrape.py
